--- a/README
+++ b/README
@@ -20,7 +20,7 @@ git clone https://github.com/asdfman666/linux-shimeji.git OR download a zip arch
 
 To run, execute launch.sh in the project root directory.
 
-To build, feel the need to build the project, just type 'ant' in the project root directory.
+To build, just execute 'ant' in the project root directory.
 
 Note that the program comes pre-compiled and you do not need to build unless you plan to modify the source.
 
@@ -38,15 +38,15 @@ For more information refer to the configuration files.
 
 4. OBTAINING MORE SHIMEJIS
 
-For now it's best if you use Shimejis with the default Actions.xml/Behavior.xml (46 images in the img folder all but guaranteed a default Shimeji). This covers the vast majority of Shimejis available on pixiv.net (tag : しめじ). You can try using heavily customized, they will most likely work, you'll just lose some functionality. A guide on converting any action/behavior file to support this version may or may not come later.
+For now it's best if you use Shimejis with the default Actions.xml/Behavior.xml (46 images in the img folder all but guaranteed a default Shimeji). This covers the vast majority of Shimejis available on pixiv.net (tag : しめじ). You can try using heavily customized ones, they will most likely work, you'll just lose some functionality. A guide on converting any action/behavior file to support this version may or may not come later.
 
 Note on why they do not work : This version has simultaneous multiple window interaction unlike the original, which is limited to one window at a time (mascots will fall off it as soon as you unfocus). The config files needed to to be modified to add checks for all active windows so that the mascot can keep track of it's environment. This only affects the action selection so if you break the config files, the mascots will either stay still and wait when no action is available. 
 
-I'll emphasize one last time that most Shimejis you'll find on Pixiv are 46-image default config ones. 
+I'll emphasize one last time that most Shimejis you'll find on Pixiv are 46-image default config ones that will work just fine.
 
 
 5. LICENSE
 
-Licenses are too deep for me. This project inherits the license of the original program (www.group-finity.com/Shimeji)
+Licenses are too deep for me. This project inherits the license of the original program (www.group-finity.com/Shimeji).
 
-The included Shimeji was obtained from http://www.pixiv.net/member_illust.php?mode=medium&illust_id=26401063 all credits to the original author
+The included Shimeji was obtained from http://www.pixiv.net/member_illust.php?mode=medium&illust_id=26401063 all credits to the original creator.
