--- a/README
+++ b/README
@@ -8,6 +8,10 @@ Future feature plans :
 
 CHANGELOG
 
+v1.01
+- All normal desktop windows should now be detected and interacted with correctly, titles.conf now defaults to an empty file.
+- The mascots are now set a 'dock' window type property, using compton/xcompmgr with -C will not draw window shadows on them.
+
 22.4.2012 v1.0
 - Initial release, all basic functionality implemented
 
@@ -15,7 +19,7 @@ CHANGELOG
 
 1. REQUIREMENTS
 
-A compositing manager, Compton is highly recommended. Turn off window shadows or find a way to exclude the Shimeji windows or you'll end up with a shadow box surrounding every mascot. 
+A compositing manager, Compton is highly recommended.  
 
 Tested with both OpenJDK 6 and SunJDK 6 JRE's. There were some issues on Gnome and KDE when using OpenJDK, if you experience them the only solution I can offer for now is using Sun JRE, should solve all problems. 
 
@@ -36,7 +40,7 @@ Note that the program comes pre-compiled and you do not need to build unless you
 
 window.conf - set window dimensions to match your window decorations. If you're using a plain WM with no decorations, zero on all values or an empty file should be accurate
 
-titles.conf - enter window titles, one per line, case sensitive. The Mascots will interact with these windows only. If no window titles are specified, all windows will be interacted with. Most WM's draw invisible windows for UI elements so it is recommended to use the config file.
+titles.conf - enter window titles, one per line, case sensitive. The Mascots will interact with these windows only. If no window titles are specified, all windows will be interacted with. Leaving this file empty should be ideal for most people.
 
 For more information refer to the configuration files. 
 
