--- a/README
+++ b/README
@@ -8,6 +8,9 @@ Future feature plans :
 
 CHANGELOG
 
+v1.02
+- Full functionality with all standard Behavior.xml and Actions.xml files. Feel free to use any Shimeji you find (make sure the config isn't a Shimeji-EE config though) and edit the files as you see fit.
+
 v1.01
 - All normal desktop windows should now be detected and interacted with correctly, titles.conf now defaults to an empty file.
 - The mascots are now set a 'dock' window type property, using compton/xcompmgr with -C will not draw window shadows on them.
@@ -19,7 +22,7 @@ v1.01
 
 1. REQUIREMENTS
 
-A compositing manager, Compton is highly recommended.  
+A compositing manager, Compton is highly recommended. 
 
 Tested with both OpenJDK 6 and SunJDK 6 JRE's. There were some issues on Gnome and KDE when using OpenJDK, if you experience them the only solution I can offer for now is using Sun JRE, should solve all problems. 
 
@@ -47,18 +50,11 @@ For more information refer to the configuration files.
 
 4. OBTAINING MORE SHIMEJIS
 
-Default Shimejis with 46 images work best with this version . This covers the vast majority of Shimejis available on pixiv.net (tag : しめじ). You can try using heavily customized ones, they will most likely work, you'll just lose some functionality. EXTRA NOTE : Most Shimejis are 46-image default ones and will work perfectly fine with this version, just use the included config files and copy the images over.
+You can find thousands on www.deviantart.com and www.pixiv.net (tag: しめじ)
 
-Note on why they do not work : This version has simultaneous multiple window interaction unlike the original, which is limited to one window at a time (mascots will fall off it as soon as you unfocus). The config files needed to to be modified to add checks for all active windows so that the mascot can keep track of it's environment. This only affects the action selection so if you break the config files, the mascots will either stay still and wait when no action is available. 
+This version uses Japanese Actions.xml and Behavior.xml. There's a good chance you can use the images from a Shimeji with an English configuration file with good results aswell. The vast majority of available Shimejis have Japanese configuration files and will work perfectly fine.
 
-To make a custom Actions.xml fully functional in this version, all jump action conditions with "activeIE" targeting the active window (3 in total) must be kept intact.
-
-They are as follows : "IEの左に飛びつく" "IEの右に飛びつく" "IEの下に飛びつく"
-After you've located them and ensured they stay intact, search and replace ALL occurences of "environment.activeIE" with "curIE" and you have a fully multi-window functional Actions.xml.
-
-To navigate your way through the .xml files more comfortably, I recommend using an english version of the file (from the Shimeji-EE project) as a roadmap.
-
-Altering the the default Behavior.xml is not recommended. If you encounter a non-default behavior file (and you're already using the Actions.xml that came with it), try to find the 'new' entrys and only add those, risk of breakage is extremely low that way. 
+To navigate your way through the .xml files more comfortably, I recommend using an english version of the file (from the Shimeji-EE project) as a roadmap (http://code.google.com/p/shimeji-ee/). 
 
 
 5. LICENSE
@@ -67,4 +63,3 @@ This project inherits the ZLIB/LIBPNG license of the original program (www.group
 The included Java Native Access library (http://github.com/twall/jna) is licensed under the LGPL. The Mozilla Rhino Javascript Engine (www.mozilla.org/rhino)
 is licensed under the Mozilla Public License.
 
-The included Shimeji was obtained from http://www.pixiv.net/member_illust.php?mode=medium&illust_id=26401063 all credits to the original creator.
