--- a/README
+++ b/README
@@ -8,8 +8,12 @@ Future feature plans :
 
 CHANGELOG
 
+v1.03
+- Complete remakes of the window state/type handling. AwesomeWM-users should have no more issues.
+- A conversion script for Shimeji-EE configurations is now included.
+
 v1.02
-- Full functionality with all standard Behavior.xml and Actions.xml files. Feel free to use any Shimeji you find (make sure the config isn't a Shimeji-EE config though) and edit the files as you see fit.
+- Full functionality with all standard Behavior.xml and Actions.xml files. Feel free to use any Shimeji you find and edit the files as you see fit.
 
 v1.01
 - All normal desktop windows should now be detected and interacted with correctly, titles.conf now defaults to an empty file.
@@ -50,11 +54,15 @@ For more information refer to the configuration files.
 
 4. OBTAINING MORE SHIMEJIS
 
-You can find thousands on www.deviantart.com and www.pixiv.net (tag: しめじ)
+You can find thousands on www.deviantart.com and www.pixiv.net (tag: しめじ). This version uses Japanese Actions.xml and Behavior.xml files.
 
-This version uses Japanese Actions.xml and Behavior.xml. There's a good chance you can use the images from a Shimeji with an English configuration file with good results aswell. The vast majority of available Shimejis have Japanese configuration files and will work perfectly fine.
+To navigate your way through the .xml files more comfortably, I recommend using an english version of the file from the Shimeji-EE project as a roadmap (http://code.google.com/p/shimeji-ee/). 
 
-To navigate your way through the .xml files more comfortably, I recommend using an english version of the file (from the Shimeji-EE project) as a roadmap (http://code.google.com/p/shimeji-ee/). 
+A conversion file for English .xml files used in the EE-version is included and any ShimejiEE mascot can be made fully functional with this version. Make sure you use a Japanese Mascot.xsd XML-schema after the conversion, do not replace it with the English one. The filenames that are read by this version are the same as in the current official Shimeji, 'Actions.xml' and 'Behavior.xml'. Keep in mind that all images should go into the 'img', no subdirectories inside will be read, same goes for configurations and the 'conf' directory.
+
+You will find 'conv.sed' in the 'conf' directory. You can also find it separately here : https://gist.github.com/2497639
+
+Detailed usage instructions can be found within the file.
 
 
 5. KNOWN ISSUES
